--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,6 @@
     {
       "src": "backend/server.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/angular.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist/frontend/browser"
-      }
     }
   ],
   "routes": [
@@ -20,9 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/frontend/browser/$1"
+      "dest": "/frontend/dist/frontend/browser/index.html"
     }
-  ],
-  "installCommand": "cd frontend && npm install && cd ../backend && npm install",
-  "buildCommand": "cd frontend && npm run build"
+  ]
 }
